<resources>
    <string name="app_name">CalculadoraDivises</string>
    <string name="txtEuros">Euros</string>
    <string name="txtInputDefault">Enter an amout</string>
    <string name="btnLliures">Pound</string>
    <string name="btnDollar">Dollar</string>
    <string name="btnYen">Yen</string>
    <string name="btnYuan">Yuan</string>
    <string name="setValueAlertDialogTitle">Value of </string>
    <string name="setValueAlertDialogMessage">Enter the conversion value of</string>
    <string name="acceptButton">Accept</string>
    <string name="cancelButton">Cancelar</string>
    <string name="setValueAlertDialogError">This value is not valid</string>
    <string name="doConversionError">Error when converting. Enter a value and select a currency</string>
    <string name="infoRestablecerDivisa">To reset the value of the currency, press and hold the corresponding button</string>
    <string name="messageRestablecerDivisa">reestablished</string>
    <string name="divisa">Currency</string>
    <string name="afegirDivisa">Add currency</string>
    <string name="restablecerDivisaButton">Restart</string>
</resources>